# Flight-Software

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  cppcheck_report.txt  format.sh  hw_config.c
.github/workflows/: clang-format-check.yml  cppcheck.yml
lib/: README.md
lib/Si7021-Pico/: si7021.cpp  si7021.hpp
lib/Si7021-Pico/examples/: CMakeLists.txt  poll_data.cpp
lib/ublox-MX-Pico/: CMakeLists.txt  README.md  format.sh  ublox_defs.hpp  ublox_mx.cpp  ublox_mx.hpp
lib/ublox-MX-Pico/examples/: CMakeLists.txt  poll_data.cpp
sim/: hitl.cpp  hitl.hpp  sim_data.cpp  sim_data.hpp
src/: README.md  constants.hpp  main.cpp  pins.cpp  pins.hpp  types.hpp  util.cpp  util.hpp
src/actuator/: actuator.cpp  actuator.hpp
src/blims/: blims.cpp  blims.hpp
src/core/: constants.hpp  events.cpp  events.hpp  flight_loop.cpp  flight_loop.hpp  flight_mode.cpp  flight_mode.hpp  fsw.cpp  fsw.hpp  mode_manager.cpp  mode_manager.hpp  modules.cpp  modules.hpp  state.cpp  state.hpp
src/rfm/: pico_hal.h  rfm.cpp  rfm.hpp
src/sd/: hw_config.c  sd.cpp  sd.hpp
src/sensor/: sensor.cpp  sensor.hpp
src/sensors/: sensor_suite.hpp
src/storage/: fram.cpp  fram.hpp  hw_config.c  hw_config.cpp  sd.cpp  sd.hpp
src/telem/: rfm.cpp  rfm.hpp  telem.cpp  telem.hpp
test/: CMakeLists.txt  README.md
test/actuate_mav/: CMakeLists.txt  actuate_mav.cpp
test/actuate_ssa/: CMakeLists.txt  actuate_ssa.cpp
test/actuate_sv/: CMakeLists.txt  actuate_sv.cpp
test/basic/: CMakeLists.txt
test/basic/bus_scan/: CMakeLists.txt
test/blims_motor/: CMakeLists.txt
test/blims_test/: CMakeLists.txt  blims_test.cpp
test/bus_scan/: CMakeLists.txt  bus_scan.cpp
test/buzzer/: CMakeLists.txt  buzzer.cpp
test/detect_apogee/: CMakeLists.txt  detect_apogee.cpp
test/detect_armed/: CMakeLists.txt  detect_armed.cpp
test/detect_liftoff/: CMakeLists.txt  detect_liftoff.cpp
test/gps/: CMakeLists.txt  gps.cpp
test/hitl_transactions/: CMakeLists.txt  hitl_transactions.cpp
test/mav_actuate/: CMakeLists.txt  mav_actuate.cpp
test/rf_rx/: CMakeLists.txt  rf_rx.cpp
test/rf_rx_fec/: CMakeLists.txt  rf_rx_fec.cpp
test/rf_transmit/: CMakeLists.txt  rf_transmit.cpp
test/rf_tx/: CMakeLists.txt  rf_tx.cpp
test/rf_tx_fec/: CMakeLists.txt  rf_tx_fec.cpp
test/rf_tx_interrupt/: CMakeLists.txt  rf_tx_interrupt.cpp
test/sd/: CMakeLists.txt
test/sd/simple_sd/: CMakeLists.txt
test/sd_write/: CMakeLists.txt  hw_config.c  sd_write.cpp  sd_write_sdio.cpp
test/sd_write_sdio/: CMakeLists.txt  hw_config.c  sd_write_sdio.cpp
test/sd_write_spi/: CMakeLists.txt  hw_config.c  sd_write_spi.cpp
test/ssa/: CMakeLists.txt  ssa.cpp
tools/: README.md  apply_noise.py  fake_log.txt  log.txt  log_apogee.txt  log_check.txt  log_check2.txt  log_events.txt  log_full.txt  plot_data.py  test.py  test2.py
tools/card_clear/: CMakeLists.txt  card_clear.cpp
tools/card_read/: CMakeLists.txt  card_read.cpp
tools/clear_card/: CMakeLists.txt  clear_card.cpp
tools/fram_clear/: CMakeLists.txt  fram_clear.cpp
tools/fram_read/: CMakeLists.txt  fram_read.cpp
tools/hardware_perf/: CMakeLists.txt  hardware_perf.cpp
tools/perf/: CMakeLists.txt  perf.cpp
tools/read_card/: CMakeLists.txt  read_card.cpp
